--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        class="logo"><img
             class="animated bounce"
             data-animate="bounceIn"
-            src="static/img/1.jpg" alt="我的头像"/>
+            src="static/img/4.jpg" alt="我的头像"/>
     </a>
     <!-- 头部导航 -->
     <nav>
@@ -43,7 +43,7 @@
                 <img class="user-img animated"
                      data-init="swing"
                      data-animate="bounce"
-                     src="./static/img/1.jpg"
+                     src="static/img/1.jpg"
                      alt="张辰的头像">
                 <p data-init="fadeInRightBig"
                    data-animate="bounce"
