--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 <header>
     <!-- logo -->
     <a href="#"
-       class="logo"><img
-            class="animated bounce"
-            data-animate="bounceIn"
-            src="static/img/1.jpg" alt="我的头像"/>
+       class="logo">个人简历
     </a>
     <!-- 头部导航 -->
     <nav>
