--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 <!--头部-->
 <header>
-    <!-- logo -->
-    <a href="#"
-       class="logo">个人简历
+    <!--title-->
+    <a href="#" class="logo">
+        个人简历
     </a>
     <!-- 头部导航 -->
     <nav>
