--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--头部-->
 <header>
     <!--title-->
-    <a href="#" class="logo">
+    <a href="#" class="logo" style="color:#fff;font-size:18px;font-weight:bold">
         个人简历
     </a>
     <!-- 头部导航 -->
