--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
                         <dl class="project-experience animated" data-init="zoomInRight"
                             data-animate>
                             <dt>项目经验</dt>
-                            <dd>1.项目名称：百度首页登陆之后的完整版<br><br>
-                                2.项目描述：完成页面的下拉,tab切换,换肤,悬浮导航，以及css3的一些交互动画效果。
+                            <dd>1.项目名称：服装购物商城项目<br><br>
+                                2.项目描述：通过开发自己的js封装库和js设计模式完成页面的脚本特效（登陆框，悬浮导航，二级菜单等），并配合利用css3完成页面的部分页面特效：包括移动，轮播等。
+                                商城项目访问地址：https://lnm190.github.io/shang/
                             </dd>
                         </dl>
                     </a>
@@ -174,8 +175,9 @@
                         <dl class="project-experience animated" data-init="zoomInRight"
                             data-animate>
                             <dt>项目经验</dt>
-                            <dd>1.项目名称：开发手机版本的新闻系统<br><br>
-                                2.项目描述：用html5 css3 bootstrap javascript ajax php mysql制作动态新闻页面，后台用bootstrap搭建，通过后台的对数据的增删改查来实现前端页面的动态效果
+                            <dd>1.项目名称：教育宣传网站项目<br><br>
+                                2.项目描述：用html5 css3 完成页面的语义化布局，和css3的各种动画特效，和部分javascript脚本特效，完成项目效果
+                                  项目访问地址：https://lnm190.github.io/jike/
                             </dd>
                         </dl>
                     </a>
@@ -185,8 +187,9 @@
                             data-animate>
                             <dt>项目经验</dt>
                             <dd>
-                                1.项目名称：开发Nodejs版本的新闻系统<br><br>
-                                2.项目描述：用Nodejs搭建后台，express渲染模板形式搭载mysql，结合ajax，从数据库获取数据，渲染到前端页面
+                                1.项目名称：开发利用后台json数据实现的js瀑布流<br><br>
+                                2.项目描述：通过模拟后台数据，完成前台页面的渲染，并利用js脚本和设计模式完成图片的瀑布流效果。
+                                  项目访问地址：https://lnm190.github.io/pubu/
                             </dd>
                         </dl>
                     </a>
@@ -196,30 +199,9 @@
                             data-animate>
                             <dt>项目经验</dt>
                             <dd>
-                                1.项目名称：用fis3优化网站页面<br><br>
-                                2.项目描述：通过fis3使页面达到性能的最优状态，解决资源加载的按需，同步异步，依赖管理，缓存，压缩合并，内嵌等问题
-                            </dd>
-                        </dl>
-                    </a>
-                    <a class="slide" href="javascript:;"
-                       target="_blank">
-                        <dl class="project-experience animated" data-init="zoomInUp"
-                            data-animate>
-                            <dt>项目经验</dt>
-                            <dd>
-                                1.项目名称：用less编写网站页面<br><br>
-                                2.项目描述：通过编写gulp脚本对less进行编译，并对css进行压缩合并优化等，减少代码量，让css更易维护，方便修改扩充
-                            </dd>
-                        </dl>
-                    </a>
-                    <a class="slide" href="javascript:;"
-                       target="_blank">
-                        <dl class="project-experience animated" data-init="zoomInUp"
-                            data-animate>
-                            <dt>项目经验</dt>
-                            <dd>
-                                1.项目名称：利用javascript设计模式编写网页程序<br><br>
-                                2.项目描述：通过js的单例模式，构造函数模式编写网站代码，使后期更易维护管理，代码更稳定，运行效率更高。
+                                1.项目名称：h5游戏项目<br><br>
+                                2.项目描述：通过利用html5 canvas和javascript制作的html5小游戏，使用两个HTML5的canvas标签来制作。一个标签绘制背景、海葵、果实，一个标签绘制鱼、漂浮物、UI界面、特效圈，两个标签叠加到一起。
+                                  游戏项目访问地址：https://lnm190.github.io/h5/
                             </dd>
                         </dl>
                     </a>
@@ -231,17 +213,6 @@
                             <dd>
                                 1.项目名称：新闻系统漏洞防御<br><br>
                                 2.项目描述：xss注入防范利用htmlspecialchars函数来检测入库数据修改页面，通过session来设置提交时的token值，来达到实时防御跨站请求伪造攻击。
-                            </dd>
-                        </dl>
-                    </a>
-                    <a class="slide" href="javascript:;"
-                       target="_blank">
-                        <dl class="project-experience animated" data-init="zoomInUp"
-                            data-animate>
-                            <dt>项目经验</dt>
-                            <dd>
-                                1.项目名称：angularjs制作京东app购物车项目<br><br>
-                                2.项目描述：完成了购物车的列表，计算，编辑，搜索，加入购物车等功能，利用bootstrap搭建响应式页面，使其能够适配pc端和移动端。
                             </dd>
                         </dl>
                     </a>
