--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="flex-box flex-center">
             <div class="flex-item-1 text-center">
                 <div class="experience-wrap">
-                    <a class="slide" href="javascript:;"
+                    <span class="slide" href="javascript:;"
                        target="_blank">
                         <dl class="project-experience animated" data-init="zoomInRight"
                             data-animate>
@@ -169,7 +169,7 @@
                                 商城项目访问地址：https://lnm190.github.io/shang/
                             </dd>
                         </dl>
-                    </a>
+                    </span>
                     <a class="slide" href="javascript:;"
                        target="_blank">
                         <dl class="project-experience animated" data-init="zoomInRight"
