--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             </dd>
                         </dl>
                     </span>
-                    <a class="slide" href="javascript:;"
+                    <span class="slide" href="javascript:;"
                        target="_blank">
                         <dl class="project-experience animated" data-init="zoomInRight"
                             data-animate>
@@ -180,8 +180,8 @@
                                   项目访问地址：https://lnm190.github.io/jike/
                             </dd>
                         </dl>
-                    </a>
-                    <a class="slide" href="javascript:;"
+                    </span>
+                    <span class="slide" href="javascript:;"
                        target="_blank">
                         <dl class="project-experience animated" data-init="zoomInUp"
                             data-animate>
@@ -192,8 +192,8 @@
                                   项目访问地址：https://lnm190.github.io/pubu/
                             </dd>
                         </dl>
-                    </a>
-                    <a class="slide" href="javascript:;"
+                    </span>
+                    <span class="slide" href="javascript:;"
                        target="_blank">
                         <dl class="project-experience animated" data-init="zoomInUp"
                             data-animate>
@@ -204,8 +204,8 @@
                                   游戏项目访问地址：https://lnm190.github.io/h5/
                             </dd>
                         </dl>
-                    </a>
-                    <a class="slide" href="javascript:;"
+                    </span>
+                    <span class="slide" href="javascript:;"
                        target="_blank">
                         <dl class="project-experience animated" data-init="zoomInUp"
                             data-animate>
@@ -215,7 +215,7 @@
                                 2.项目描述：xss注入防范利用htmlspecialchars函数来检测入库数据修改页面，通过session来设置提交时的token值，来达到实时防御跨站请求伪造攻击。
                             </dd>
                         </dl>
-                    </a>
+                    </span>
                 </div>
             </div>
         </div>
