--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#page3">求职技能</a></li>
             <li><a href="#page4">项目经验</a></li>
             <li><a href="#page5">自我简绍</a></li>
+            <li><a href="#page5">学业课程</a></li>
         </ul>
         <div id="fanye" class="down"></div>
     </nav>
