--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </div>
         </div>
     </div>
-    <div class="section">
+    <div class="section page6">
         <div class="flex-box flex-center">
             <div class="flex-item-1 text-center">
                 <h3 class="title">学业课程</h3>
