--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
             </div>
         </div>
     </div>
-    <div class="section page6">
+    <div class="section">
         <div class="flex-box flex-center">
             <div class="flex-item-1 text-center">
                 <h3 class="title">学业课程</h3>
-                <ul class="about">
+                <ul class="about" style="font-size:14px;">
                     <li class="animated"
                         data-init="lightSpeedIn"
                         data-animate>html5新增标签和属性，canvas ,web存储，应用缓存，css常用布局技巧，浏览器兼容，绘制特殊图形和动画，css核心技巧和响应式布局，
