--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
         <div class="flex-box flex-center">
             <div class="flex-item-1 text-center">
                 <h3 class="title">学业课程</h3>
-                <ul class="about" style="font-size:14px;">
-                    <li class="animated"
+                <ul class="about">
+                    <li  style="font-size:14px;" class="animated"
                         data-init="lightSpeedIn"
                         data-animate>html5新增标签和属性，canvas ,web存储，应用缓存，css常用布局技巧，浏览器兼容，绘制特殊图形和动画，css核心技巧和响应式布局，
                     </li>
-                    <li class="animated"
+                    <li  style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>javascript Dom对象，事件，函数，数组，循环，内置对象，面向对象，正则表达式，瀑布流布局。jquery选择器事件，特效，ajax异步访问和加载片段，jquery扩展，插件，jqueryUI,
                     </li>
