--- a/index.html
+++ b/index.html
@@ -271,39 +271,39 @@
                         data-init="fadeInLeftBig"
                         data-animate>javascript Dom对象，事件，函数，数组，循环，内置对象，面向对象，正则表达式，瀑布流布局。jquery选择器事件，特效，ajax异步访问和加载片段，jquery扩展，插件，jqueryUI,
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>bootstrap珊格代码表格，组件下拉菜单按钮，输入框组导航组，摸态框，滚动监听。
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>javascript设计模式，单例模式，工厂模式，构造函数模式，建造者模式。
                     </li>                  
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>面向对象编程，html5/css3/iconfont/bootstrap/js/ajax/php/mysql开发适配移动端的前后台新闻系统，
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>用nodejs搭建后台服务器，结合js/mysql开发前后台动态页面。
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>fis3/gulp/grunt/优化代码性能，压缩，合并，加戳，雪碧图，模块化开发。
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>用less/sass预处理器的使用，符合性能优化压缩合并，少写代码，易于管理，
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>git的使用，本地操作，远程协作，github仓库搭建，项目文件上传，管理，托管。
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>xss的检测住入防御，跨站伪造请求防御，通过转义，tooken等方式实现防御，完善php安全性漏洞。
                     </li>
-                    <li class="animated"
+                    <li style="font-size:14px;" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>vue.js mvc框架搭建，双向数据绑定，指令，controller的使用
                     </li>
