--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         data-init="fadeInLeftBig"
                         data-animate>xss的检测住入防御，跨站伪造请求防御，通过转义，tooken等方式实现防御，完善php安全性漏洞。
                     </li>
-                    <li style="font-size:14px;" class="animated"
+                    <li style="font-size:14px" class="animated"
                         data-init="fadeInLeftBig"
                         data-animate>vue.js mvc框架搭建，双向数据绑定，指令，controller的使用
                     </li>
