--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </li>
                     <li class="animated"
                         data-init="lightSpeedIn"
-                        data-animate>（2014-2015）通过培训实习和自学对前端技术更加熟练，并结合工作需求，对后端进行大量的学习和练习，并应用到工作中。
+                        data-animate>（2014-2015）通过实习和自学对前端技术更加熟练，并结合工作需求，对后端进行大量的学习和练习，并应用到工作中。
                     </li>
                 </ul>
             </div>
